istio-ingress-gw.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-default-gateway
  namespace: istio-ingress
  annotations: {}
    # metallb.io/address-pool: local
    # metallb.io/loadBalancerIPs: 192.168.3.12
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*.local"
      - "*.me"
  - port:
      number: 5432
      name: tcp-postgres
      protocol: TCP
    hosts:
      - "postgres.local"
  # - port:
  #     number: 9001
  #     name: tcp-9001
  #     protocol: TCP
  #   hosts:
  #       - "*.local"
  #       - "*.me"
