virtual-services.yml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "bookshop.local"
  - "bookshop.me"
  gateways:
  - istio-ingress/istio-default-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx-service.default.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  hosts:
  - "longhorn-ui.local"
  gateways:
  - istio-ingress/istio-default-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: longhorn-frontend
        port:
          number: 80
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: postgres
# spec:
#   hosts:
#   - "bookshop.me"
#   gateways:
#   - istio-ingress/istio-default-gateway
#   http:
#   - match:
#     - uri:
#         prefix: /
#     route:
#     - destination:
#         host: postgres-service.default
#         port:
#           number: 5432
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-minio
  namespace: default
spec:
  hosts:
  - minio.local
  - minio-console.local
  addresses:
  - 192.168.3.113/32
  ports:
  - number: 9000
    name: minio-api
    protocol: HTTP
  - number: 9001
    name: minio-console
    protocol: HTTP
  resolution: STATIC
  endpoints:
  - address: 192.168.3.113
    ports:
      minio-api: 9000
      minio-console: 9001
  location: MESH_EXTERNAL 
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: minio-console
  namespace: default
spec:
  hosts:
  - "minio-console.local"
  gateways:
  - istio-ingress/istio-default-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: minio-console.local
        port:
          number: 9001
    timeout: 30s
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: minio-api
  namespace: default
spec:
  hosts:
  - "minio.local"
  gateways:
  - istio-ingress/istio-default-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: minio.local
        port:
          number: 9000
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: postgres
  namespace: postgres
spec:
  hosts:
    - "postgres.local"
  gateways:
    - istio-ingress/istio-default-gateway
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: postgres-service.postgres.svc.cluster.local
        port:
          number: 5432              
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nexus
  namespace: nexus
spec:
  hosts:
    - "nexus.local"
  gateways:
    - istio-ingress/istio-default-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: nexus-nxrm-ha-hl
            port:
              number: 8081
