vitrual-services.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "bookshop.local"
  gateways:
  - istio-ingress/istio-default-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: productpage
        port:
          number: 9080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  hosts:
  - "longhorn-ui.local"
  gateways:
  - istio-ingress/istio-default-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: longhorn-frontend
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: minio-external
  namespace: default
spec:
  hosts:
    - minio.local
  location: MESH_EXTERNAL
  ports:
    - number: 9001
      name: http
      protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio-local
  namespace: default
spec:
  hosts:
    - "minio.local"
  gateways:
    - istio-ingress/istio-default-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: minio.local
            port:
              number: 9001
